--- a/html5up-dimension/index.html
+++ b/html5up-dimension/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PUT YOUR NAME HERE</title>
+		<title>Sheri Lawler</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>YOUR NAME HERE</h1>
+								<h1>Sheri Lawler</h1>
 								<p>Welcome to my portfolio!</p>
 							</div>
 						</div>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>INTRO ABOUT WHAT YOU HAVE DONE IN DATA ANALYTICS. Check out my <a href="#work">work</a>.</p>
+								<p>With Data Analytics, I can let my inner geek free! I get to flex my logical brain with datasets and spreadsheets then stir in my creative side with graphs, charts and data visualizations. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -54,16 +54,19 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 1</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 2</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
+								<p>A simple excel dashboard for at-a-glance review of employees, benchmarks, and performance.<br><a href="https://drive.google.com/open?id=1WDzpkXS-Xj7yvjN-DPH4a67lW2rVo6ae">HR Compensation Tool 1</a></p>
+								<p>Analysis of a Rental Car company looking for ways to improve proift and reduce expenses.<br><a href="https://drive.google.com/open?id=1m_CemGThlhNmOLeJPolee9xDPafSJBsf">Capstone 1 2</a></p>
+								<p>Capstone 2 discription <br><a href="putlinkhere">Capstone 2 3</a></p>
+								<p>Drill: Making API Requests in Python<br><a href="putlinkhere">Python Drill</a></p>
+								<p>Drill: Web Scraping<br><a href="putlinkhere">Drill: Web Scraping</a></p>
+								<p>Describe Final Capstone<br><a href="putlinkhere">Final Capstone</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>PUT INFO ABOUT YOU HERE</p>
+								<p>I have always had a passion for health, healthcare and learning. My desire to keep growing personally and professionally is insatiable. Workign in data analytics allows me to utalize talents that I have while also continuing to learn new ones.</p>
 							</article>
 
 						<!-- Contact -->
